--- a/app/containers/MainLayout/style.scss
+++ b/app/containers/MainLayout/style.scss
@@ -8,7 +8,6 @@
 .MAIN-NAVIGATION [class*="AnchorLeft"] {
   width: $nav-width;
   box-shadow: 1px 0 4px 0 rgba(0,0,0,0.1);
-  z-index: 1500;
 }
 
 .Nav-Wrapper {
