--- a/app/containers/SSChecklist/style.scss
+++ b/app/containers/SSChecklist/style.scss
@@ -103,7 +103,7 @@ $ssc-picker-height: 150px;
     .ssc-picker-container {
         position: absolute;
         width: calc(100% - #{$nav-width});
-        z-index: 1300;
+        z-index: 1100;
     }
     .ssc-main {
         padding: 40px;
